--- a/1-landing-page/index.html
+++ b/1-landing-page/index.html
@@ -99,7 +99,7 @@
 
   <div class="col-md-6 "data-aos="fade-down-right">
 <div class="about-text ">
-<h2 class="position-relative text-danger">About Us</h2>
+<h1 class="text-danger">About Us</h1>
 <h3 class="fw-bolder p-3 ps-0 ">For 15 years , we passionate about archives better results for our clients.</h3>
 <p class="fw-bold ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam perferendis praesentium blanditiis, veniam, ipsam ad 
   cum eligendi sequi non, eaque adipisci corrupti aspernatur sunt saepe?</p>
