--- a/2-portfolio/index.html
+++ b/2-portfolio/index.html
@@ -40,7 +40,7 @@
 <!-- ======== btn-up ========= -->
     <!-- ============= navbar =============-->
   <nav class="navbar navbar-expand-lg fixed-top z-3 " id="mainNav" >
-         <div class="container justify-content-between">
+         <div class="container-fluid">
          <!-- logo -->
          <a class="navbar-brand fw-bolder" href="index.html"> Hello,I'm Dalia <i class="fa-solid fa-code"></i></a>
          <!-- responsive nav button -->
