--- a/1-landing-page/index.html
+++ b/1-landing-page/index.html
@@ -33,7 +33,7 @@
 <nav class="navbar navbar-expand-lg fixed-top z-3 " id="mainNav" >
   <div class="container justify-content-between">
   <!-- logo -->
-  <a class="navbar-brand fw-bolder" href="index.html"> Landing Page </a>
+  <a class="navbar-brand fw-bolder" href="index.html"> Welcome </a>
   <!-- responsive nav button -->
  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
  <span class="navbar-toggler-icon m-auto"><i class="fa-solid fa-bars-staggered  text-center"></i></span></button>
